--- a/package.json
+++ b/package.json
@@ -14,5 +14,18 @@
   "type": "module",
   "workspaces": [
     "src/vest_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/agent": "2.2.0",
+    "@dfinity/auth-client": "2.2.0",
+    "@dfinity/candid": "2.2.0",
+    "@dfinity/identity": "2.2.0",
+    "@dfinity/ledger-icp": "2.6.5",
+    "@dfinity/nns": "8.1.0",
+    "@dfinity/principal": "2.2.0",
+    "@dfinity/utils": "2.8.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.10"
+  }
 }
