--- a/src/vest_frontend/package.json
+++ b/src/vest_frontend/package.json
@@ -4,27 +4,27 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "setup": "npm i && dfx canister create vest_backend && dfx generate vest_backend && dfx deploy",
+    "setup": "npm i && dfx canister create yeezy_backend && dfx generate yeezy_backend && dfx deploy",
     "start": "vite --port 3000",
     "prebuild": "dfx generate",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "@dfinity/agent": "^2.1.3",
-    "@dfinity/candid": "^2.1.3",
-    "@dfinity/principal": "^2.1.3"
+    "@dfinity/agent": "2.2.0",
+    "@dfinity/candid": "2.2.0",
+    "@dfinity/principal": "2.2.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.4",
-    "@sveltejs/kit": "^2.5.26",
-    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@sveltejs/adapter-static": "^3.0.0",
+    "@sveltejs/kit": "2.15.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "dotenv": "^16.3.1",
     "sass": "^1.63.6",
-    "svelte": "^4.2.19",
-    "svelte-check": "^4.0.1",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.3",
+    "svelte": "^5.0.0",
+    "svelte-check": "^3.4.4",
+    "typescript": "^5.1.3",
+    "vite": "^5.0.0",
     "vite-plugin-environment": "^1.1.3"
   }
 }
